# stock-news-summarizer

./: .env.example  .gitignore  AI_news_summarizer_Documentation.md  DEPLOYMENT.md  README.md  app.py  config.py  pyproject.toml  requirements.txt  stock-news-summarizer_Documentation.md
ai/: gemini_processor.py
database/: models.py
frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(marketing)/: layout.tsx
frontend/src/components/: loading-screen.tsx  stock-chart.tsx
frontend/src/components/alerts/: create-rule-modal.tsx  rule-card.tsx
frontend/src/components/auth/: animated-bg.tsx  market-indices-bar.tsx  market-preview-card.tsx
frontend/src/components/charts/: correlation-chart.tsx  entity-graph.tsx  rsi-gauge.tsx  sentiment-timeline.tsx
frontend/src/components/dashboard/: agent-timeline.tsx  analysis-in-progress.tsx  center-panel.tsx  history-accordion.tsx  key-themes.tsx  market-data-card.tsx  ml-signal-card.tsx  quant-signals.tsx  right-panel.tsx  sentiment-gauge.tsx  source-articles.tsx  what-changed-box.tsx
frontend/src/hooks/: use-alerts.ts  use-ml.ts  use-refresh.ts  use-system.ts  use-tickers.ts
frontend/src/lib/: api.ts  auth-context.tsx  firebase.ts  types.ts
frontend/src/providers/: query-provider.tsx
frontend/src/stores/: dashboard-store.ts
quantmind/: README.md  __init__.py  main.py  tui.py
quantmind/agents/: __init__.py  base.py  memory_agent.py  news_agent.py  orchestrator.py  quant_agent.py
quantmind/api/: __init__.py  main.py
quantmind/config/: __init__.py  settings.py
quantmind/integrations/: __init__.py  alert_engine.py  mcp_server.py  telegram.py
quantmind/llm/: __init__.py  anthropic_client.py  api_key_env.py  base_client.py  builder.py  capabilities.py  client.py  factory.py  google_client.py  model_catalog.py  openai_client.py  prompts.py  structured.py  validators.py
quantmind/memory/: __init__.py  database.py  vector_store.py
quantmind/ml/: RUN.md  __init__.py  data_collector.py  entity_extractor.py  entity_graph.py  features.py  model.py  prediction_service.py
quantmind/pipeline/: __init__.py  runner.py  scheduler.py
quantmind/schemas/: __init__.py  models.py
quantmind/scrapers/: __init__.py  base.py  finviz.py  polygon.py  sec_edgar.py  tradingview.py
quantmind/tests/: test_agents_unit.py  test_e2e_multi.py  test_e2e_single.py  test_foundation.py  test_llm.py  test_llm_live.py  test_llm_unit.py  test_mcp.py  test_memory_rag.py  test_ml.py  test_orchestrator_live.py  test_scrapers.py  test_telegram.py
quantmind/utils/: __init__.py  logger.py  rate_limiter.py
scheduler/: daily_tasks.py
scrapers/: __init__.py  finviz_scraper.py  polygon_scraper.py  tradingview_scraper.py
static/css/: style.css
static/js/: main.js
stockstalker/: __init__.py  credibility.py  main.py  tui.py
stockstalker/agents/: __init__.py  base.py  memory_agent.py  news_agent.py  orchestrator.py  quant_agent.py  vader_sentiment.py
stockstalker/api/: __init__.py  auth.py  main.py
stockstalker/config/: __init__.py  settings.py
stockstalker/integrations/: __init__.py  alert_engine.py  mcp_server.py  telegram.py
stockstalker/llm/: __init__.py  anthropic_client.py  api_key_env.py  base_client.py  builder.py  capabilities.py  client.py  factory.py  google_client.py  model_catalog.py  openai_client.py  prompts.py  structured.py  validators.py
stockstalker/memory/: __init__.py  database.py  vector_store.py
stockstalker/pipeline/: __init__.py  runner.py  scheduler.py
stockstalker/schemas/: __init__.py  models.py
stockstalker/scrapers/: __init__.py  base.py  finviz.py  google_news.py  polygon.py  sec_edgar.py  tradingview.py  yahoo_rss.py
stockstalker/tests/: test_agents_unit.py  test_e2e_multi.py  test_e2e_single.py  test_foundation.py  test_llm.py  test_llm_live.py  test_llm_unit.py  test_market_data.py  test_mcp.py  test_memory_rag.py  test_orchestrator_live.py  test_scrapers.py  test_telegram.py  test_vader.py
stockstalker/utils/: __init__.py  logger.py  rate_limiter.py
templates/: index.html
utils/: cache_manager.py  rate_limiter.py
video/: package-lock.json  package.json
video/src/: Root.tsx  Tour.tsx  theme.ts
video/src/components/: LogoMark.tsx  scenes.tsx  ui.tsx
(+34 files in other folders)
