# StockStalker v2 — packaging / dependency manifest
# NOTE (Step 1.2): build-backend corrected to the valid PEP 517 backend
# "setuptools.build_meta". The originally specified
# "setuptools.backends.legacy:build" is not a real backend and breaks `pip install`.

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockstalker"
version = "2.0.0"
description = "Multi-agent quantitative news intelligence system"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "loguru>=0.7.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "google-generativeai>=0.8.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
    "fake-useragent>=1.5.0",
    "python-dotenv>=1.0.0",
    # LLM client layer — provider-agnostic LangChain factory (Phase 2)
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    # Interactive TUI menu — rich panels/tables/spinners + questionary arrow-key menus
    "rich>=13.0.0",
    "questionary>=2.0.0",
    # Telegram bot integration (Phase B) — optional at runtime
    "python-telegram-bot>=21.0",
    # MCP server (Phase C) — exposes StockStalker as tools to MCP clients
    "fastmcp>=0.4.0",
    # REST API layer (Phase A) — FastAPI app exposing the engine over HTTP for the frontend
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

# Console-script entry point: after `pip install`, users get a `stockstalker`
# command. With no subcommand it launches the interactive menu (stockstalker.main:main).
[project.scripts]
stockstalker = "stockstalker.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stockstalker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["stockstalker/tests"]
markers = [
    "live: live tests that call real external APIs (deselected by default; run with -m live)",
]
addopts = "-m 'not live'"
